신고하기,조회(관리자)백앤드완료